force-app/main/default/objects/Engagement_Counterparty_Comment__c/Engagement_Counterparty_Comment__c.object-meta.xml
<CustomObject>
    <label>Engagement Counterparty Comment</label>
    <nameField>
        <displayFormat>ECC-{0000}</displayFormat>
        <label>Engagement Counterparty Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Counterpart Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>