force-app/main/default/objects/Engagement_Counterparty_Comment__c/fields/Created_Date_FORM__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_FORM__c</fullName>
    <formula>IF(ISBLANK(Opp_CP_Comment_Create_Date__c ), DATEVALUE(CreatedDate), Opp_CP_Comment_Create_Date__c )</formula>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>