force-app/main/default/objects/Engagement_Counterparty_Comment__c/fields/OnlyCreator__c.field-meta.xml
<CustomField>
    <fullName>OnlyCreator__c</fullName>
    <formula>IF(ISBLANK(Opp_CP_Comment_Creator__c), CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName, Opp_CP_Comment_Creator__c )</formula>
    <label>Creator</label>
    <type>Text</type>
</CustomField>