force-app/main/default/objects/Engagement_Counterparty_Comment__c/fields/Opp_CP_Comment_Creator__c.field-meta.xml
<CustomField>
    <fullName>Opp_CP_Comment_Creator__c</fullName>
    <label>Opp CP Comment Creator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>