force-app/main/default/objects/Engagement_Counterparty_Comment__c/fields/Related_Engagement_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Related_Engagement_Counterparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Engagement Counterparty</label>
    <referenceTo>Engagement_Counterparty__c</referenceTo>
    <relationshipLabel>Engagement Counterparty Comments</relationshipLabel>
    <relationshipName>Engagement_Counterparty_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>